--- a/index.html
+++ b/index.html
@@ -1,16 +1,103 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <header>
+    <nav>
+      <a class="navItem link" href="./services.html">Services</a>
+      <a class="navItem link" href="#">Product</a>
+      <a class="navItem link" href="#">Vision</a>
+      <a class="navItem link" href="#">Features</a>
+      <a class="navItem link" href="#">About</a>
+      <a class="navItem link" href="#">Contact</a>
+      
+    </nav>
+    <img class="navItem navImg" src="img/logo.png" alt="Great Idea! Company logo.">
+  </header>
+
+  <div class="title">
+    <aside>
+      <h1>Innovation</h1>
+      <h1>On</h1>
+      <h1>Demand</h1>
+      <button>Get Started</button>
+    </aside>
+
+    <img src="img/header-img.png" class="codeImg" alt="Image of a code snippet.">
+  </div>
+
+  <div class="content1">
+    <section>
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+<br>
+    <section>
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+  </div>
+
+  <section class="code">
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </section>
+
+  <div class="content1 s3 seperator">
+    <section>
+      <h3>Services</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section>
+      <h3>Product</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section>
+      <h3>Vision</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+  </div>
+
+
+  <section class="contact">
+    <h4>Contact</h4>
+    <p>123 Way 456 Street</p>
+    <p>Somewhere, USA</p>
+    <p class="number">1 (888) 888-8888</p>
+    <p>sales@greatidea.io</p>
+  </section>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+
+
 </body>
+
 </html>
